Melhoria no Authenticate User
