# src/shared/infra/http/swagger.json
@@ -15,7 +15,7 @@
   "paths": {
     "/categories": {
       "post": {
-        "tags": [ "categories" ],
+        "tags": ["categories"],
         "summary": "Add a new Category to the Car",
         "description": "Create a new Category",
         "requestBody": {
@@ -37,7 +37,7 @@
         }
       },
       "get": {
-        "tags": [ "categories" ],
+        "tags": ["categories"],
         "summary": "List all Categories",
         "description": "List all categories by cars",
         "responses": {
@@ -86,12 +86,12 @@
     },
     "/specifications": {
       "post": {
-        "tags": [ "specifications" ],
+        "tags": ["specifications"],
         "summary": "Add a new Specification to the Car",
         "description": "Create a new Specification",
         "security": [
           {
-            "bearerAuth":[]
+            "bearerAuth": []
           }
         ],
         "requestBody": {
@@ -120,7 +120,7 @@
         }
       },
       "get": {
-        "tags": [ "specifications" ],
+        "tags": ["specifications"],
         "summary": "List all Specifications",
         "description": "List all specifications by cars",
         "responses": {
@@ -142,7 +142,7 @@
     },
     "/users": {
       "post": {
-        "tags": [ "users" ],
+        "tags": ["users"],
         "summary": "Add a new User",
         "description": "Create a new User",
         "requestBody": {
@@ -173,7 +173,7 @@
     },
     "/users/avatar": {
       "patch": {
-        "tags": [ "users" ],
+        "tags": ["users"],
         "summary": "Upload avatar user",
         "description": "Uploading a user avatar",
         "requestBody": {
@@ -207,7 +207,7 @@
     },
     "/sessions": {
       "post": {
-        "tags": [ "users" ],
+        "tags": ["users"],
         "summary": "Create a user session",
         "description": "Create a user session by email and password",
         "requestBody": {
@@ -238,9 +238,38 @@
         }
       }
     },
+    "/sessions/refresh-token": {
+      "post": {
+        "tags": ["users"],
+        "summary": "Refresh a user session token",
+        "description": "Refresh a user token",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "properties": {
+                  "token": {
+                    "type": "uuid",
+                    "example": "your@email.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Refresh Token does not exists!"
+          }
+        }
+      }
+    },
     "/cars": {
       "post": {
-        "tags": [ "cars" ],
+        "tags": ["cars"],
         "summary": "Add a new Car",
         "description": "Create a new Car",
         "requestBody": {
@@ -262,7 +291,7 @@
         }
       },
       "get": {
-        "tags": [ "cars" ],
+        "tags": ["cars"],
         "summary": "List all Cars",
         "description": "List all cars",
         "responses": {
@@ -284,7 +313,7 @@
     },
     "/cars/availables": {
       "get": {
-        "tags": [ "cars" ],
+        "tags": ["cars"],
         "summary": "List all available Cars",
         "description": "List all available cars",
         "responses": {
@@ -337,7 +366,7 @@
     },
     "/cars/specifications/{id}": {
       "patch": {
-        "tags": [ "cars" ],
+        "tags": ["cars"],
         "summary": "Set specifications on car",
         "description": "Set specifications list on cars",
         "requestBody": {
@@ -434,7 +463,7 @@
     },
     "/rentals": {
       "post": {
-        "tags": [ "rentals" ],
+        "tags": ["rentals"],
         "summary": "Add a new Rental",
         "description": "Create a new Rental",
         "requestBody": {
@@ -462,6 +491,67 @@
           }
         }
       }
+    },
+    "/rentals/devolution/{id}": {
+      "post": {
+        "tags": ["rentals"],
+        "summary": "Devolution from a Rental",
+        "description": "Devolution car",
+        "responses": {
+          "200": {
+            "description": "Updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Rental"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Rental does not exists"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Car ID",
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ]
+      }
+    },
+    "/rentals/me": {
+      "get": {
+        "tags": ["rentals"],
+        "summary": "List all rentals by a user",
+        "description": "List rentals by user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Rental"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -486,7 +576,7 @@
             "format": "date-time"
           }
         },
-        "required": ["name","description"]
+        "required": ["name", "description"]
       },
       "Specification": {
         "type": "object",
@@ -508,7 +598,7 @@
             "format": "date-time"
           }
         },
-        "required": ["name","description"]
+        "required": ["name", "description"]
       },
       "User": {
         "type": "object",
@@ -592,7 +682,15 @@
             "format": "date-time"
           }
         },
-        "required": ["name", "description", "brand", "category_id", "daily_rate", "license_plate", "fine_amount"]
+        "required": [
+          "name",
+          "description",
+          "brand",
+          "category_id",
+          "daily_rate",
+          "license_plate",
+          "fine_amount"
+        ]
       },
       "Rental": {
         "type": "object",
@@ -646,7 +744,7 @@
   },
   "security": [
     {
-      "bearerAuth":[]
+      "bearerAuth": []
     }
   ]
 }
